--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -96,7 +96,7 @@
               aria-expanded="false"
             >
               <img
-                src=""
+                src="{{user.image.url}}"
                 class="rounded-circle"
                 height="22"
                 alt="Avatar"
