--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -101,7 +101,7 @@
               aria-expanded="false"
             >
               <img
-                src=""
+                src="{{ user.image.url }}"
                 class="rounded-circle"
                 height="22"
                 alt="Avatar"
